[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/204.png" type="Texture" id=1]
[ext_resource path="res://assets/251.png" type="Texture" id=2]
[ext_resource path="res://assets/227.png" type="Texture" id=3]
[ext_resource path="res://assets/range2.png" type="Texture" id=5]
[ext_resource path="res://assets/181.png" type="Texture" id=6]
[ext_resource path="res://src/Tower1.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Tower2" type="Area2D"]
z_index = 1
collision_mask = 6
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Range" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( -3.8147e-06, 3.8147e-06 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Cannon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MissileLeft" type="Sprite" parent="Cannon"]
position = Vector2( 10, -7 )
texture = ExtResource( 2 )

[node name="MissileRight" type="Sprite" parent="Cannon"]
position = Vector2( 10, 7 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Cannon"]
texture = ExtResource( 3 )

[node name="MouseOver" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2147483648
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseOver"]
visible = false
shape = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Enemy_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_exited"]
[connection signal="body_exited" from="." to="." method="_on_projectile_exited"]
[connection signal="mouse_entered" from="MouseOver" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MouseOver" to="." method="_on_mouse_exited"]
